# pykatas

./: pyproject.toml
.github/workflows/: validate.yaml
pykatas/: roman_numerals.py
tests/: test_roman_numerals.py
